--- a/css/login.css
+++ b/css/login.css
@@ -70,6 +70,6 @@ input::-webkit-inner-spin-button {
 }
 @media(max-width: 560px){
     .row-login{
-        width: 80%;
+        width: 93%;
     }
 }
