--- a/css/register.css
+++ b/css/register.css
@@ -38,7 +38,7 @@
 }
 @media(max-width: 980px){
     .row-register{
-        width: 60%;
+        width: 90%;
         display: grid;
         grid-template-columns: 1fr;
     }
@@ -52,6 +52,7 @@
 }
 @media(max-width: 560px){
     .row-register{
-        width: 80%;
+        width: 93%;
     }
+
 }
